# bs4-stubs

./: LICENSE  README.md  pyproject.toml
bs4-stubs/: __init__.pyi  dammit.pyi  diagnose.pyi  element.pyi  formatter.pyi
bs4-stubs/builder/: _htmlparser.pyi  _lxml.pyi
bs4_stubs/builder/: __init__.pyi  _html5lib.pyi
tests/: test_bs4_stubs.py
